tests/More/Bad/58.tig
/* error: break out of a loop. */
if 1 then break
